feat: ui implementation forgot-password-modal
